--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,6 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "aspnet"
 BBFILE_PATTERN_aspnet = "^${LAYERDIR}/"
 BBFILE_PRIORITY_aspnet = ""
+
+HOSTTOOLS += "dotnet"
+
