Prepare the use of LAYERSERIES_COMPAT

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,5 +9,10 @@ BBFILE_COLLECTIONS += "aspnet"
 BBFILE_PATTERN_aspnet = "^${LAYERDIR}/"
 BBFILE_PRIORITY_aspnet = ""
 
+# Tested on pyro
+# Unknown on rocko
+# Not working on sumo: https://github.com/dotnet/coreclr/issues/19025
+# LAYERSERIES_COMPAT_aspnet = "pyro"
+
 HOSTTOOLS += "dotnet"
 
