Enable compatibility with Yocto 2.7 ("warrior")

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "aspnet"
 BBFILE_PATTERN_aspnet = "^${LAYERDIR}/"
 BBFILE_PRIORITY_aspnet = ""
 
-LAYERSERIES_COMPAT_aspnet = "thud"
+LAYERSERIES_COMPAT_aspnet = "thud warrior"
 
 HOSTTOOLS += "dotnet"
 
